Nr e negrito no nome ok.